SET(ALL_LIBS
	libfusepp
)


FOREACH (mylibfolder ${ALL_LIBS})
    ADD_SUBDIRECTORY(${mylibfolder})
ENDFOREACH (mylibfolder ${ALL_LIBS})

IF (FUSEPP_BUILD_SAMPLES)
	ADD_SUBDIRECTORY(samples)
ENDIF (FUSEPP_BUILD_SAMPLES)

# IF (FUSEPP_BUILD_TESTS)
	# ADD_SUBDIRECTORY(tests)
# ENDIF (FUSEPP_BUILD_TESTS)

