SET(ALL_COMPONENTS
	libfusepp
)

IF (FUSEPP_USE_POSTGRESQL)
	LIST(APPEND ALL_COMPONENTS fusepp-pg)
ENDIF (FUSEPP_USE_POSTGRESQL)

IF (FUSEPP_BUILD_SAMPLES)
	LIST(APPEND ALL_COMPONENTS samples)
ENDIF (FUSEPP_BUILD_SAMPLES)

FOREACH (component ${ALL_COMPONENTS})
    ADD_SUBDIRECTORY(${component})
ENDFOREACH (component ${ALL_COMPONENTS})
