SET(LIB_NAME libfusepp)

SET(HEADER_PATH ${fusepp_SOURCE_DIR}/include/fusepp)

SET(LIB_PUBLIC_HEADERS
	${HEADER_PATH}/Error.h
	${HEADER_PATH}/Export.h
	${HEADER_PATH}/FileSystem.h
)

SET(LIB_SRC
	Error.cpp
	FileSystem.cpp
)

IF (FUSEPP_STATIC)
	SET(LIB_STATIC_SHARED STATIC)
	ADD_DEFINITIONS(-Dlibfusepp_STATIC)
ELSE (FUSEPP_STATIC)
	SET(LIB_STATIC_SHARED SHARED)
ENDIF (FUSEPP_STATIC)

ADD_LIBRARY(${LIB_NAME}
	${LIB_STATIC_SHARED}
    ${LIB_PUBLIC_HEADERS}
	${LIB_SRC}
)

TARGET_LINK_LIBRARIES(${LIB_NAME}
)

SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PROJECT_LABEL "core - libfusepp")
